--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,7 @@ name: Create Pull Request on Branch Creation
 on:
   create:
     branches:
-      - 'feature/*'  # Adjust this pattern to match your branch naming convention
+      - feature/*  # Adjust this pattern to match your branch naming convention
 
 jobs:
   create-pull-request:
