--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,9 +1,7 @@
 name: Create Pull Request on Branch Creation
 
 on:
-  create:
-    branches:
-      - '*'
+  workflow_dispatch:
 
 jobs:
   create-pull-request:
