--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -20,6 +20,7 @@ jobs:
       hv-certificate-path: internal-certificates/demosanddonnuts.online
       az-resource-group-name: RSGRDEMO
       az-web-app-name: demosanddonuts
+      jira-project-id: KAN
       jira-issue: KAN-3
               
     
