--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,7 +9,9 @@ on:
   #   branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  # workflow_dispatch:
+    repository_dispatch:
+      types: [deploy-event]    
 
 jobs:
   automate-certificate:
