--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,11 +18,16 @@ jobs:
     uses: gianfra901/demosanddonnuts2024/.github/workflows/certificate.yml@main
     secrets: inherit
     with:
-      hv-namespace: admin
-      hv-certificate-path: internal-certificates/demosanddonnuts.online
-      az-resource-group-name: RSGRDEMO
-      az-web-app-name: demosanddonuts
-      jira-project-id: KAN
+      hv-namespace: ${{ github.event.client_payload.hv-namespace }}
+      hv-certificate-path: ${{ github.event.client_payload.hv-certificate-path }}
+      az-resource-group-name: ${{ github.event.client_payload.az-resource-group }}
+      az-web-app-name: ${{ github.event.client_payload.az-web-app }}
+      jira-project-id: ${{ github.event.client_payload.jira-project-id }}
       jira-issue: ${{ github.event.client_payload.jira-issue-id }}
               
     
+      # hv-namespace: admin
+      # hv-certificate-path: internal-certificates/demosanddonnuts.online
+      # az-resource-group-name: RSGRDEMO
+      # az-web-app-name: demosanddonuts
+      # jira-project-id: KAN      
